# cmon2lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
cmon2lib/: __init__.py
cmon2lib/ccaldav/: caldav_crud_functions.py  caldav_next_day_planning_read.py
cmon2lib/cli/: __init__.py
cmon2lib/cowui/: utils.py
cmon2lib/ctaiga/: taiga_project_functions.py  taiga_user_functions.py
cmon2lib/taiga/: taiga_project_functions.py  taiga_user_functions.py
cmon2lib/utils/: REQUIREMENTS.md  SPEC.md  check_script_status.py  cmon_logging.py  cmon_logging_clog.py  cmon_logging_cprint.py
cmon2lib/utils/lib/: __init__.py  cmon_collect_metadata.py  cmon_logging_formatters.py
tests/: test_caldav_next_day_planning_read.py  test_cmon_logging.py  test_cowui_utils.py  test_util.py
