[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmon2lib"
version = "0.0.1"
authors = [
    { name = "Simon Dorr", email = "simon@ich-bin-simon.de" }
]
description = "my personal python library for convenient personalized functionality"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cmon2/cmon2lib"

[tool.setuptools.packages.find]
include = ["cmon2lib", "cmon2lib.*"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = "--cov=cmon2lib --cov-report=xml --cov-report=term"
testpaths = "tests"
pythonpath = "."
